--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install",
+    "typecheck": "tsc --noEmit",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "husky": "^8.0.1",
@@ -31,5 +34,13 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
+  },
+  "lint-staged": {
+    "*.+(js|jsx|ts|tsx)": [
+      "eslint --fix"
+    ],
+    "*.+(js|jsx|ts|tsx|json|css|scss|md|mdx)": [
+      "prettier --write"
+    ]
   }
 }
