--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@next/font": "^13.1.1",
+    "axios": "^1.2.2",
     "husky": "^8.0.1",
-    "next": "12.3.1",
+    "next": "13.1.1",
     "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.3",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
-    "@types/node": "18.8.5",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "18.0.10",
     "autoprefixer": "^10.4.12",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
@@ -33,7 +37,8 @@
     "postcss": "^8.4.18",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.8.4"
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
