--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   },
   "dependencies": {
     "@next/font": "^13.1.1",
+    "@portabletext/react": "^2.0.0",
+    "@sanity/client": "^4.0.0",
+    "@sanity/image-url": "^1.0.1",
     "axios": "^1.2.2",
+    "groq": "^2.33.2",
     "husky": "^8.0.1",
     "next": "13.1.1",
     "prettier": "^2.7.1",
