--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "groq": "^2.33.2",
     "husky": "^8.0.1",
     "next": "13.1.1",
+    "nodemailer": "^6.8.0",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "18.0.10",
     "autoprefixer": "^10.4.12",
